[gd_scene load_steps=12 format=3 uid="uid://67ccaeypt8jq"]

[ext_resource type="Script" uid="uid://56mxqit5pjsg" path="res://Scenes/options.gd" id="1_4tmxy"]
[ext_resource type="FontFile" uid="uid://byj2p0422aock" path="res://Assets/RocketDoodleRegular-lxRYd.ttf" id="1_prnvy"]
[ext_resource type="AudioStream" uid="uid://de0ss7de6ubsb" path="res://Assets/ClickSFX.wav" id="3_qyyw6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qyyw6"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="Animation" id="Animation_qyyw6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(205, 93)]
}

[sub_resource type="Animation" id="Animation_ww8vx"]
resource_name = "close"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(70, 70), Vector2(70, -600)]
}

[sub_resource type="Animation" id="Animation_4tmxy"]
resource_name = "open"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(70, -600), Vector2(70, 70)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ww8vx"]
_data = {
&"RESET": SubResource("Animation_qyyw6"),
&"close": SubResource("Animation_ww8vx"),
&"open": SubResource("Animation_4tmxy")
}

[sub_resource type="StyleBoxLine" id="StyleBoxLine_qyyw6"]
color = Color(1, 1, 1, 1)
thickness = 8

[sub_resource type="StyleBoxLine" id="StyleBoxLine_ww8vx"]
color = Color(5.58317e-06, 0.713095, 0, 1)
thickness = 8

[sub_resource type="StyleBoxLine" id="StyleBoxLine_kftxf"]
color = Color(0, 0.713726, 0, 1)
thickness = 8

[node name="Options" type="Panel"]
visible = false
self_modulate = Color(0, 0, 0, 1)
offset_left = 70.0
offset_top = -600.0
offset_right = 1201.0
offset_bottom = -6.0
theme_override_styles/panel = SubResource("StyleBoxFlat_qyyw6")
script = ExtResource("1_4tmxy")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -115.5
offset_top = 44.0
offset_right = 116.5
offset_bottom = 133.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_prnvy")
theme_override_font_sizes/font_size = 80
text = "Options"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ww8vx")
}

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 974.0
offset_top = 35.0
offset_right = 1088.0
offset_bottom = 99.0
theme_override_fonts/font = ExtResource("1_prnvy")
theme_override_font_sizes/font_size = 50
text = "Back"

[node name="ClickSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_qyyw6")
volume_db = 5.0
bus = &"SFX"

[node name="SFXVolume2" type="HSlider" parent="."]
layout_mode = 0
offset_left = 61.0
offset_top = 226.0
offset_right = 716.0
offset_bottom = 292.0
theme_override_styles/slider = SubResource("StyleBoxLine_qyyw6")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_ww8vx")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_kftxf")
max_value = 1.0
step = 0.01
value = 1.0

[node name="SFXVolume" type="Label" parent="."]
layout_mode = 0
offset_left = 284.0
offset_top = 173.0
offset_right = 510.0
offset_bottom = 228.0
theme_override_font_sizes/font_size = 40
text = "SFX Volume"

[node name="MusicVolume" type="HSlider" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 345.0
offset_right = 715.0
offset_bottom = 411.0
theme_override_styles/slider = SubResource("StyleBoxLine_qyyw6")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_ww8vx")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_kftxf")
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicVolumeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 258.0
offset_top = 300.0
offset_right = 529.0
offset_bottom = 355.0
theme_override_font_sizes/font_size = 40
text = "Music Volume"

[node name="OverallVolume" type="HSlider" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 473.0
offset_right = 715.0
offset_bottom = 539.0
theme_override_styles/slider = SubResource("StyleBoxLine_qyyw6")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_ww8vx")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_kftxf")
max_value = 1.0
step = 0.01
value = 1.0

[node name="OverallVolumeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 258.0
offset_top = 428.0
offset_right = 555.0
offset_bottom = 483.0
theme_override_font_sizes/font_size = 40
text = "Overall Volume"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="SFXVolume2" to="." method="_on_sfx_volume_2_value_changed"]
[connection signal="value_changed" from="MusicVolume" to="." method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="OverallVolume" to="." method="_on_overall_volume_value_changed"]
